# selenium

.github/workflows/: bazel.yml  build-selenium-manager.yml  ci-python.yml  ci.yml  should-workflow-run.yml
docs/api/dotnet/: OpenQA.Selenium.By.html  OpenQA.Selenium.CapabilityType.html  OpenQA.Selenium.Chrome.ChromeDriver.html  OpenQA.Selenium.Chrome.ChromeDriverService.html  OpenQA.Selenium.Chrome.ChromeOptions.html  OpenQA.Selenium.Chromium.ChromiumAndroidOptions.html  OpenQA.Selenium.Chromium.ChromiumDriver.html  OpenQA.Selenium.Chromium.ChromiumDriverService.html  OpenQA.Selenium.Chromium.ChromiumMobileEmulationDeviceSettings.html  OpenQA.Selenium.Chromium.ChromiumNetworkConditions.html  OpenQA.Selenium.Chromium.ChromiumOptions.html  OpenQA.Selenium.Chromium.ChromiumPerformanceLoggingPreferences.html  OpenQA.Selenium.Command.html  OpenQA.Selenium.CommandInfo.html  OpenQA.Selenium.CommandInfoRepository.html  OpenQA.Selenium.Cookie.html  OpenQA.Selenium.DefaultFileDetector.html  OpenQA.Selenium.DetachedShadowRootException.html  OpenQA.Selenium.DevTools.AuthRequiredEventArgs.html  OpenQA.Selenium.DevTools.BindingCalledEventArgs.html  OpenQA.Selenium.DevTools.CommandResponseException.html  OpenQA.Selenium.DevTools.CommandResponseTypeMap.html  OpenQA.Selenium.DevTools.ConsoleApiArgument.html  OpenQA.Selenium.DevTools.ConsoleApiCalledEventArgs.html  OpenQA.Selenium.DevTools.DevToolsCommandData.html  OpenQA.Selenium.DevTools.DevToolsDomains.html  OpenQA.Selenium.DevTools.DevToolsEventData.html  OpenQA.Selenium.DevTools.DevToolsEventReceivedEventArgs.html  OpenQA.Selenium.DevTools.DevToolsExtensionMethods.html  OpenQA.Selenium.DevTools.DevToolsOptions.html  OpenQA.Selenium.DevTools.DevToolsSession.html  OpenQA.Selenium.DevTools.DevToolsSessionDomains.html  OpenQA.Selenium.DevTools.DevToolsSessionLogLevel.html  OpenQA.Selenium.DevTools.DevToolsSessionLogMessageEventArgs.html  OpenQA.Selenium.DevTools.DevToolsVersionInfo.html  OpenQA.Selenium.DevTools.EntryAddedEventArgs.html  OpenQA.Selenium.DevTools.ExceptionThrownEventArgs.html  OpenQA.Selenium.DevTools.ICommand.html  OpenQA.Selenium.DevTools.ICommandResponse-1.html  OpenQA.Selenium.DevTools.ICommandResponse.html  (+11345 more)
docs/api/java/: allclasses-index.html  allpackages-index.html  index-all.html  index.html  member-search-index.js  overview-tree.html  type-search-index.js
docs/api/javascript/: Alert.html  AlertPromise.html  Builder.html  ChannelValue.html  Condition.html  Environment.html  IWebDriver.html  Network.html  Options.Cookie.html  Options.html  ReferenceValue.html  RegExpValue.html  RemoteValue.html  SerializationOptions.html  ShadowRoot.html  ShadowRootPromise.html  SuiteOptions.html  TargetBrowser.html  ThenableWebDriver.html  WebDriver.html  WebElement.html  WebElementCondition.html  WebElementPromise.html  bidi_browsingContextInspector.js.html  bidi_network.js.html  bidi_protocolValue.js.html  createDriver-thenableWebDriverProxy.html  global.html  index.js.html  lib_webdriver.js.html  testing_index.js.html
docs/api/py/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/api/py/_modules/: index.html
docs/api/py/_static/: documentation_options.js
docs/api/py/common/: selenium.common.exceptions.html
docs/api/py/webdriver/: selenium.webdriver.common.action_chains.html  selenium.webdriver.common.actions.action_builder.html  selenium.webdriver.common.actions.input_device.html  selenium.webdriver.common.actions.interaction.html  (+26 more)
docs/api/rb/: Selenium.html  _index.html  class_list.html  file.README.html  index.html  method_list.html  top-level-namespace.html
dotnet/: WebDriver.NET.sln
dotnet/src/support/: WebDriver.Support.csproj
dotnet/src/webdriver/: WebDriver.csproj  WebDriver.csproj.prebuild.sh
dotnet/src/webdriverbackedselenium/: Selenium.WebDriverBackedSelenium.csproj
dotnet/test/common/: WebDriver.Common.Tests.csproj  WebDriver.Common.Tests.csproj.prebuild.sh
dotnet/test/support/: WebDriver.Support.Tests.csproj
java/: maven_deps.bzl  maven_install.json
java/client/test/org/openqa/selenium/remote/http/: BUILD.bazel
java/src/org/openqa/selenium/addcloud/: AccessGoogleCloudApi.java  BUILD.bazel
java/src/org/openqa/selenium/bidi/: BUILD.bazel  BiDiProvider.java  HasBiDi.java  Network.java
java/src/org/openqa/selenium/bidi/features/: NetworkManager.java
java/src/org/openqa/selenium/bidi/network/: InterceptPhase.java  UrlPattern.java
(+550 files in other folders)
